NTR - Added different simple-search variants & updated occurrences

--- a/Resources/administration/src/app/component/base/sw-card-filter/sw-card-filter.html.twig
+++ b/Resources/administration/src/app/component/base/sw-card-filter/sw-card-filter.html.twig
@@ -4,6 +4,8 @@
             <div :class="hasFilterClass">
                 {% block sw_card_filter_bar_container_field %}
                     <sw-simple-search-field
+                            size="small"
+                            variant="form"
                             @searchTermChanged="onTermChange"
                             :placeholder="placeholder"
                             :delay="delay"
