--- a/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.html.twig
+++ b/Resources/administration/src/app/component/base/sw-simple-search-field/sw-simple-search-field.html.twig
@@ -1,5 +1,5 @@
 {% block sw_simple_search_field %}
-    <div class="sw-simple-search-field">
+    <div class="sw-simple-search-field" :class="fieldClasses">
         {% block sw_simple_search_field_input %}
             <sw-field type="text"
                       class="sw-simple-search-field__input"
