--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-restrictions/sw-product-variants-configurator-restrictions.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-restrictions/sw-product-variants-configurator-restrictions.html.twig
@@ -5,6 +5,8 @@
             <div class="sw-product-variants-configurator-restrictions__search">
                 {% block sw_product_variants_configurator_restrictions_search_field %}
                     <sw-simple-search-field
+                            size="small"
+                            variant="form"
                             v-model="term"
                             :placeholder="$tc('sw-product.variations.configuratorModal.searchRestrictions')">
                     </sw-simple-search-field>
