--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.html.twig
@@ -5,6 +5,8 @@
                 <slot name="toolbar-search-field">
                     {% block sw_product_variants_configurator_selection_search_field %}
                         <sw-simple-search-field
+                            size="small"
+                            variant="form"
                             class="sw-property-search__search-field sw-product-variants-configurator-selection-search__search-field"
                             ref="searchField"
                             @focus="onFocusSearch"
