--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.scss
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-configurator/sw-product-variants-configurator-selection/sw-product-variants-configurator-selection.scss
@@ -14,7 +14,7 @@ $sw-product-variants-configurator-selection-search-background: $color-light-gray
     }
 
     .sw-icon.sw-simple-search-field__search-icon.icon--small-search.sw-icon--small {
-        left: 45px;
+        right: 45px;
     }
 }
 
