--- a/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-overview/sw-product-variants-overview.html.twig
+++ b/Resources/administration/src/module/sw-product/component/sw-product-variants/sw-product-variants-overview/sw-product-variants-overview.html.twig
@@ -8,8 +8,10 @@
 
                         {% block sw_product_variants_overview_option_list_toolbar_container_search_field %}
                             <sw-simple-search-field
-                                @searchTermChanged="onSearch"
-                                v-model="term">
+                                variant="form"
+                                size="small"
+                                v-model="term"
+                                @searchTermChanged="onSearch">
                             </sw-simple-search-field>
                         {% endblock %}
 
