--- a/Resources/administration/src/module/sw-settings-custom-field/component/sw-custom-field-list/sw-custom-field-list.html.twig
+++ b/Resources/administration/src/module/sw-settings-custom-field/component/sw-custom-field-list/sw-custom-field-list.html.twig
@@ -5,7 +5,12 @@
             <div class="sw-custom-field-list__toolbar">
                 <sw-container columns="1fr 32px minmax(100px, 200px)" gap="0 10px">
                     {% block sw_custom_field_list_toolbar_searchfield %}
-                        <sw-simple-search-field @searchTermChanged="onSearch" v-model="term" />
+                        <sw-simple-search-field
+                            size="small"
+                            variant="form"
+                            v-model="term"
+                            @searchTermChanged="onSearch">
+                        </sw-simple-search-field>
                     {% endblock %}
 
                     {% block sw_custom_field_list_toolbar_delete %}
