NEXT-3049 - Remove CMS feature flag

--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.html.twig
@@ -109,8 +109,8 @@
 
                                         {% block sw_cms_detail_stage_empty_stade_content %}
                                             <div class="sw-cms-detail__empty-stage-content">
-                                                <h2 class="empty-stage__headline">{{ $tc('sw-cms.detail.headlineEmptyState') }}</h2>
-                                                <p class="empty-stage__claim">{{ $tc('sw-cms.detail.claimEmptyState') }}</p>
+                                                <h2 class="sw-cms-detail__empty-stage-headline">{{ $tc('sw-cms.detail.headlineEmptyState') }}</h2>
+                                                <p class="sw-cms-detail__empty-stage-claim">{{ $tc('sw-cms.detail.claimEmptyState') }}</p>
                                                 <sw-button variant="primary" @click="onAddBlockSection">{{ $tc('sw-cms.detail.actionEmptyState') }}</sw-button>
                                             </div>
                                         {% endblock %}
