--- a/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
+++ b/Resources/administration/src/module/sw-cms/page/sw-cms-detail/sw-cms-detail.scss
@@ -136,13 +136,13 @@
                 margin: auto;
             }
 
-            h2.empty-stage__headline {
+            h2.sw-cms-detail__empty-stage-headline {
                 font-size: 32px;
                 font-weight: 400;
                 margin-bottom: 5px;
             }
 
-            p.empty-stage__claim {
+            p.sw-cms-detail__empty-stage-claim {
                 margin-bottom: 20px;
             }
         }
