NEXT-2948 - Add inheritance for switches textfields and checkboxes

--- a/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
+++ b/Resources/administration/src/app/component/form/field-base/sw-base-field/sw-base-field.scss
@@ -16,6 +16,10 @@
         }
     }
 
+    .sw-field__inheritance-icon {
+        margin-right: 8px;
+    }
+
     .sw-field__button-restore {
         color: $color-kashmir;
         padding: 0 8px;
