--- a/Resources/administration/src/app/component/form/field-base/sw-field-error/sw-field-error.html.twig
+++ b/Resources/administration/src/app/component/form/field-base/sw-field-error/sw-field-error.html.twig
@@ -1,5 +1,5 @@
 {% block sw_field_error %}
-    <div class="sw-field__error" v-if="error">
+    <div class="sw-field__error" v-if="error && error.code !== 0">
         {{ error.detail }}
     </div>
 {% endblock %}
