--- a/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.html.twig
+++ b/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.html.twig
@@ -1,4 +1,4 @@
-<div class="sw-field sw-field--checkbox" :class="swFieldClasses">
+<div class="sw-field--checkbox" :class="swCheckboxFieldClasses">
     <div class="sw-field--checkbox__content">
         <div class="sw-field__checkbox">
             <input type="checkbox"
@@ -12,30 +12,12 @@
             </div>
         </div>
 
-        <div v-if="isInheritanceField"
-             class="sw-field--checkbox__inheritance-icon">
-            <sw-icon v-if="isInherited"
-                     :multicolor="true"
-                     name="custom-inherited"
-                     size="16">
-            </sw-icon>
-            <sw-icon v-else
-                     class="sw-field--checkbox__inheritance-unInherited"
-                     :multicolor="true"
-                     name="custom-uninherited"
-                     v-tooltip="$tc('global.sw-field.tooltipRestoreInheritance')"
-                     @click="onClickRestoreInheritance"
-                     size="16">
-            </sw-icon>
-        </div>
-
-        <label v-if="label" class="sw-field__label" :for="formFieldName || identification">
-            {{ label }}{{ required ? '*' : '' }}
-        </label>
-
-    <span>
-        <button v-if="inherited" class="sw-field__button-restore">{{ $tc('global.sw-field.buttonRestoreInheritance') }}</button>
-        <sw-help-text v-if="helpText" :text="helpText"></sw-help-text>
-    </span>
+        <sw-base-field v-bind="$attrs"
+                       :disabled="disabled"
+                       :isInheritanceField="isInheritanceField"
+                       :isInherited="isInherited"
+                       @inheritance-restore="restoreInheritance">
+        </sw-base-field>
+    </div>
     <sw-field-error :error="actualError"></sw-field-error>
 </div>
