--- a/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.scss
+++ b/Resources/administration/src/app/component/form/sw-checkbox-field/sw-checkbox-field.scss
@@ -7,10 +7,21 @@ $sw-field-color-border: $color-steam-cloud;
 $sw-field-color-error: $color-crimson;
 $sw-field-color-inherited: $color-purple;
 
-.sw-field.sw-field--checkbox {
+.sw-field--checkbox {
+    margin-bottom: 22px;
+
+    .sw-field {
+        margin-bottom: 0;
+
+        .sw-field__label {
+            margin-bottom: 0;
+        }
+    }
+
     .sw-field--checkbox__content {
         display: grid;
         grid-template-columns: 16px 1fr auto;
+        align-items: center;
         grid-column-gap: 10px;
     }
 
@@ -87,27 +98,6 @@ $sw-field-color-inherited: $color-purple;
         }
     }
 
-    &.is--inheritanceField {
-        .sw-field--checkbox__inheritance-unInherited {
-            cursor: pointer;
-        }
-
-        .sw-field--checkbox__content {
-            grid-template-columns: 24px 16px 1fr auto;
-        }
-    }
-
-    &.is--inherited {
-        .sw-field--checkbox__label {
-            color:  $sw-field-color-inherited;
-        }
-        input[type="checkbox"] {
-            &:checked ~ .sw-field__checkbox-state {
-                border-color: $sw-field-color-border;
-                background: $sw-field-color-border;
-            }
-        }
-    }
 
     &.has--error {
         .sw-field__checkbox-state {
@@ -126,6 +116,18 @@ $sw-field-color-inherited: $color-purple;
 
             &:checked:disabled ~ .sw-field__checkbox-state {
                 border: 1px solid $sw-field-color-error;
+            }
+        }
+    }
+
+    &.is--inherited {
+        .sw-field--checkbox__label {
+            color:  $sw-field-color-inherited;
+        }
+        input[type="checkbox"] {
+            &:checked ~ .sw-field__checkbox-state {
+                border-color: $sw-field-color-border;
+                background: $sw-field-color-border;
             }
         }
     }
