NEXT-3082 - fix text input field autofill color

--- a/Resources/administration/src/app/component/form/field-base/sw-contextual-field/sw-contextual-field.scss
+++ b/Resources/administration/src/app/component/form/field-base/sw-contextual-field/sw-contextual-field.scss
@@ -3,6 +3,10 @@
 $sw-field-transition: border-color 0.3s ease-out;
 
 .sw-contextual-field {
+    input:-webkit-autofill {
+        -webkit-box-shadow: 0 0 0 1000px $color-white inset;
+    }
+
     .sw-block-field__block {
         display: flex;
     }
