NEXT-3090 - prevent empty email templates to be saved

--- a/Resources/administration/src/module/sw-mail-template/page/sw-mail-header-footer-detail/sw-mail-header-footer-detail.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/page/sw-mail-header-footer-detail/sw-mail-header-footer-detail.html.twig
@@ -47,7 +47,8 @@
                                       :label="$tc('sw-mail-header-footer.detail.basic.labelName')"
                                       :placeholder="$tc('sw-mail-header-footer.detail.basic.placeholderName')"
                                       v-model="mailHeaderFooter.name"
-                                      validation="required">
+                                      validation="required"
+                                      :required="true">
                             </sw-field>
                         {% endblock %}
 
