--- a/Resources/administration/src/module/sw-newsletter-receiver/page/sw-newsletter-receiver-list/sw-newsletter-receiver-list.twig
+++ b/Resources/administration/src/module/sw-newsletter-receiver/page/sw-newsletter-receiver-list/sw-newsletter-receiver-list.twig
@@ -16,7 +16,8 @@
                     <h2>
                         {% block sw_newsletter_receiverlist_list_smart_bar_header_title_text %}
                             {{ $tc('global.sw-admin-menu.navigation.mainMenuItemMarketing') }}
-                            <sw-icon name="small-arrow-medium-right" small></sw-icon> {{ $tc('sw-newsletter-receiver.list.textHeadline') }}
+                            <sw-icon name="small-arrow-medium-right" small></sw-icon>
+                            {{ $tc('sw-newsletter-receiver.list.textHeadline') }}
                         {% endblock %}
                     </h2>
                 {% endblock %}
@@ -36,20 +37,60 @@
                                            :columns="columns"
                                            :repository="repository"
                                            detailRoute="sw.newsletter.receiver.detail">
-                            <template slot="column-status" slot-scope="{ item, compact, isInlineEdit }">
-                                <template v-if="item.status === 'notSet'">
-                                    {{ $tc('sw-newsletter-receiver.list.notSet') }}
+
+                            {% block sw_newsletter_receiverlist_list_grid_name %}
+                                <template slot="column-firstName" slot-scope="{ item, compact, isInlineEdit }">
+
+                                    {% block sw_newsletter_receiverlist_list_grid_inline_edit_name %}
+                                        <template v-if="isInlineEdit">
+                                            {% block sw_newsletter_receiverlist_list_grid_inline_edit_first_name %}
+                                                <sw-text-field class="sw-newsletter-receiver-list__inline-edit-first-name"
+                                                               v-model="item.firstName"
+                                                               :size="compact ? 'small' : 'default'">
+                                                </sw-text-field>
+                                            {% endblock %}
+
+                                            {% block sw_newsletter_receiverlist_list_grid_inline_edit_last_name %}
+                                                <sw-text-field class="sw-newsletter-receiver-list__inline-edit-last-name"
+                                                               v-model="item.lastName"
+                                                               :size="compact ? 'small' : 'default'">
+                                                </sw-text-field>
+                                            {% endblock %}
+                                        </template>
+                                    {% endblock %}
+
+                                    {% block sw_newsletter_receiverlist_list_grid_name_link %}
+                                        <router-link v-else :to="{ name: 'sw.newsletter.receiver.detail', params: { id: item.id } }">
+                                            {{ item.firstName }} {{ item.lastName }}
+                                        </router-link>
+                                    {% endblock %}
                                 </template>
-                                <template v-else-if="item.status === 'optIn'">
-                                    {{ $tc('sw-newsletter-receiver.list.optIn') }}
+                            {% endblock %}
+
+                            {% block sw_newsletter_receiverlist_list_grid_status %}
+                                <template slot="column-status" slot-scope="{ item, compact, isInlineEdit }">
+                                    {% block sw_newsletter_receiverlist_list_grid_status_notSet %}
+                                        <template v-if="item.status === 'notSet'">
+                                            <sw-label small>{{ $tc('sw-newsletter-receiver.list.notSet') }}</sw-label>
+                                        </template>
+                                    {% endblock %}
+                                    {% block sw_newsletter_receiverlist_list_grid_status_optIn %}
+                                        <template v-else-if="item.status === 'optIn'">
+                                            <sw-label small>{{ $tc('sw-newsletter-receiver.list.optIn') }}</sw-label>
+                                        </template>
+                                    {% endblock %}
+                                    {% block sw_newsletter_receiverlist_list_grid_status_optOut %}
+                                        <template v-else-if="item.status === 'optOut'">
+                                            <sw-label small>{{ $tc('sw-newsletter-receiver.list.optOut') }}</sw-label>
+                                        </template>
+                                    {% endblock %}
+                                    {% block sw_newsletter_receiverlist_list_grid_status_direct %}
+                                        <template v-else-if="item.status === 'direct'">
+                                            <sw-label small>{{ $tc('sw-newsletter-receiver.list.direct') }}</sw-label>
+                                        </template>
+                                    {% endblock %}
                                 </template>
-                                <template v-else-if="item.status === 'optOut'">
-                                    {{ $tc('sw-newsletter-receiver.list.optOut') }}
-                                </template>
-                                <template v-else-if="item.status === 'direct'">
-                                    {{ $tc('sw-newsletter-receiver.list.direct') }}
-                                </template>
-                            </template>
+                            {% endblock %}
                         </sw-entity-listing>
 
                         {% block sw_newsletter_receiver_list_empty_state %}
@@ -61,113 +102,113 @@
         {% endblock %}
 
         {% block sw_newsletter_receiver_list_sidebar %}
-        <sw-sidebar slot="sidebar">
-            {% block sw_newsletter_receiver_list_sidebar_refresh %}
-                <sw-sidebar-item
+            <sw-sidebar slot="sidebar">
+                {% block sw_newsletter_receiver_list_sidebar_refresh %}
+                    <sw-sidebar-item
                         icon="default-arrow-360-left"
                         :title="$tc('sw-newsletter-receiver.list.titleSidebarItemRefresh')"
                         @click="onRefresh">
-                </sw-sidebar-item>
-            {% endblock %}
+                    </sw-sidebar-item>
+                {% endblock %}
 
-            {% block sw_newsletter_receiver_list_sidebar_filter %}
-                <sw-sidebar-item
+                {% block sw_newsletter_receiver_list_sidebar_filter %}
+                    <sw-sidebar-item
                         ref="filterSideBar"
                         icon="default-action-filter"
                         :title="$tc('sw-newsletter-receiver.list.titleSidebarItemFilter')"
                         @sw-sidebar-item-close-content="closeContent"
                         @click="closeContent">
 
-                    {% block sw_newsletter_receiver_list_sidebar_filter_status %}
-                        <sw-sidebar-collapse>
-                            <template slot="header">{{ $tc('sw-newsletter-receiver.list.status') }}</template>
-                            <template slot="content">
-                                {% block sw_newsletter_receiver_list_sidebar_filter_status_not_set %}
-                                    <sw-newsletter-receiver-boolean-filter
+                        {% block sw_newsletter_receiver_list_sidebar_filter_status %}
+                            <sw-sidebar-collapse>
+                                <template slot="header">{{ $tc('sw-newsletter-receiver.list.status') }}</template>
+                                <template slot="content">
+                                    {% block sw_newsletter_receiver_list_sidebar_filter_status_not_set %}
+                                        <sw-newsletter-receiver-boolean-filter
                                             id="notSet"
                                             group="status"
                                             :label="$tc('sw-newsletter-receiver.list.notSet')"
                                             @change="onChange">
-                                    </sw-newsletter-receiver-boolean-filter>
-                                {% endblock %}
-                                {% block sw_newsletter_receiver_list_sidebar_filter_status_direct %}
-                                    <sw-newsletter-receiver-boolean-filter
+                                        </sw-newsletter-receiver-boolean-filter>
+                                    {% endblock %}
+                                    {% block sw_newsletter_receiver_list_sidebar_filter_status_direct %}
+                                        <sw-newsletter-receiver-boolean-filter
                                             id="direct"
                                             group="status"
                                             :label="$tc('sw-newsletter-receiver.list.direct')"
                                             @change="onChange">
-                                    </sw-newsletter-receiver-boolean-filter>
-                                {% endblock %}
-                                {% block sw_newsletter_receiver_list_sidebar_filter_status_opt_in %}
-                                    <sw-newsletter-receiver-boolean-filter
+                                        </sw-newsletter-receiver-boolean-filter>
+                                    {% endblock %}
+                                    {% block sw_newsletter_receiver_list_sidebar_filter_status_opt_in %}
+                                        <sw-newsletter-receiver-boolean-filter
                                             id="optIn"
                                             group="status"
                                             :label="$tc('sw-newsletter-receiver.list.optIn')"
                                             @change="onChange">
-                                    </sw-newsletter-receiver-boolean-filter>
-                                {% endblock %}
-                                {% block sw_newsletter_receiver_list_sidebar_filter_status_opt_out %}
-                                    <sw-newsletter-receiver-boolean-filter
+                                        </sw-newsletter-receiver-boolean-filter>
+                                    {% endblock %}
+                                    {% block sw_newsletter_receiver_list_sidebar_filter_status_opt_out %}
+                                        <sw-newsletter-receiver-boolean-filter
                                             id="optOut"
                                             group="status"
                                             :label="$tc('sw-newsletter-receiver.list.optOut')"
                                             @change="onChange">
-                                    </sw-newsletter-receiver-boolean-filter>
-                                {% endblock %}
-                            </template>
-                        </sw-sidebar-collapse>
-                    {% endblock %}
+                                        </sw-newsletter-receiver-boolean-filter>
+                                    {% endblock %}
+                                </template>
+                            </sw-sidebar-collapse>
+                        {% endblock %}
 
-                    {% block sw_newsletter_receiver_list_sidebar_filter_language %}
-                        <sw-sidebar-collapse>
-                            <template slot="header">{{ $tc('sw-newsletter-receiver.general.language') }}</template>
-                            <template slot="content">
-                                {% block sw_newsletter_receiver_list_sidebar_filter_language_items %}
-                                    <div v-for="(item, index) in languageFilters">
-                                        <sw-newsletter-receiver-boolean-filter
+                        {% block sw_newsletter_receiver_list_sidebar_filter_language %}
+                            <sw-sidebar-collapse>
+                                <template slot="header">{{ $tc('sw-newsletter-receiver.general.language') }}</template>
+                                <template slot="content">
+                                    {% block sw_newsletter_receiver_list_sidebar_filter_language_items %}
+                                        <div v-for="(item, index) in languageFilters">
+                                            <sw-newsletter-receiver-boolean-filter
                                                 :id="item.id"
                                                 group="languageId"
                                                 :label="item.name"
                                                 @change="onChange">
-                                        </sw-newsletter-receiver-boolean-filter>
-                                    </div>
-                                {% endblock %}
-                            </template>
-                        </sw-sidebar-collapse>
-                    {% endblock %}
+                                            </sw-newsletter-receiver-boolean-filter>
+                                        </div>
+                                    {% endblock %}
+                                </template>
+                            </sw-sidebar-collapse>
+                        {% endblock %}
 
-                    {% block sw_newsletter_receiver_list_sidebar_filter_sales_channel %}
-                        <sw-sidebar-collapse>
-                            <template slot="header">{{ $tc('sw-newsletter-receiver.general.salesChannel') }}</template>
-                            <template slot="content">
-                                {% block sw_newsletter_receiver_list_sidebar_filter_sales_channel_items %}
-                                    <div v-for="(item, index) in salesChannelFilters">
-                                        <sw-newsletter-receiver-boolean-filter
+                        {% block sw_newsletter_receiver_list_sidebar_filter_sales_channel %}
+                            <sw-sidebar-collapse>
+                                <template slot="header">{{ $tc('sw-newsletter-receiver.general.salesChannel') }}</template>
+                                <template slot="content">
+                                    {% block sw_newsletter_receiver_list_sidebar_filter_sales_channel_items %}
+                                        <div v-for="(item, index) in salesChannelFilters">
+                                            <sw-newsletter-receiver-boolean-filter
                                                 :id="item.id"
                                                 group="salesChannelId"
                                                 :label="item.translated.name"
                                                 @change="onChange">
-                                        </sw-newsletter-receiver-boolean-filter>
-                                    </div>
-                                {% endblock %}
-                            </template>
-                        </sw-sidebar-collapse>
-                    {% endblock %}
+                                            </sw-newsletter-receiver-boolean-filter>
+                                        </div>
+                                    {% endblock %}
+                                </template>
+                            </sw-sidebar-collapse>
+                        {% endblock %}
 
-                    {% block sw_newsletter_receiver_list_sidebar_filter_sales_tags %}
-                        <sw-sidebar-collapse>
-                            <template slot="header">{{ $tc('sw-newsletter-receiver.general.tags') }}</template>
-                            <template slot="content">
-                                {% block sw_newsletter_receiver_list_sidebar_filter_sales_tags_select %}
-                                    <sw-entity-multi-select entity="tag" @input="onChange"></sw-entity-multi-select>
-                                {% endblock %}
-                            </template>
-                        </sw-sidebar-collapse>
-                    {% endblock %}
-                </sw-sidebar-item>
-            {% endblock %}
+                        {% block sw_newsletter_receiver_list_sidebar_filter_sales_tags %}
+                            <sw-sidebar-collapse>
+                                <template slot="header">{{ $tc('sw-newsletter-receiver.general.tags') }}</template>
+                                <template slot="content">
+                                    {% block sw_newsletter_receiver_list_sidebar_filter_sales_tags_select %}
+                                        <sw-entity-multi-select entity="tag" @input="onChange"></sw-entity-multi-select>
+                                    {% endblock %}
+                                </template>
+                            </sw-sidebar-collapse>
+                        {% endblock %}
+                    </sw-sidebar-item>
+                {% endblock %}
 
-        </sw-sidebar>
+            </sw-sidebar>
         {% endblock %}
     </sw-page>
 {% endblock %}
