--- a/Resources/administration/src/app/component/base/sw-property-assignment/sw-property-assignment.html.twig
+++ b/Resources/administration/src/app/component/base/sw-property-assignment/sw-property-assignment.html.twig
@@ -31,7 +31,11 @@
 
                 {% block sw_property_assignment_empty_state %}
                     <template slot="empty">
-                            <sw-empty-state v-if="!isLoading" :title="$tc('sw-property-assignment.messageEmptyTitle')" :subline="$tc('sw-property-assignment.messageEmptySubline')"></sw-empty-state>
+                        <sw-empty-state
+                                v-if="!isLoading"
+                                :title="$tc('sw-property-assignment.messageEmptyTitle')"
+                                :subline="$tc('sw-property-assignment.messageEmptySubline')">
+                        </sw-empty-state>
                     </template>
                 {% endblock %}
             </sw-grid>
