NTR - add drag and drop for all modules, remove grab cursor on dropzones and refactor event name

--- a/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
+++ b/Resources/administration/src/module/sw-category/page/sw-category-detail/sw-category-detail.html.twig
@@ -78,7 +78,7 @@
                         :cmsPage="cmsPage"
                         :mediaItem="mediaItem"
                         :isLoading="isLoading"
-                        @media-dropped="onDropMedia"
+                        @media-drop="onDropMedia"
                         @sw-category-view-on-page-change="onCmsPageChange"
                         @sw-category-view-on-open-sidebar="openSidebar"
                         @sw-category-view-on-set-media="setMediaItem"
