--- a/Resources/administration/src/module/sw-product/view/sw-product-detail-base/sw-product-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-product/view/sw-product-detail-base/sw-product-detail-base.html.twig
@@ -20,7 +20,7 @@
             <sw-card :title="$tc('sw-product.detailBase.cardTitleMedia')" :isLoading="product.isLoading">
                 {% block sw_product_detail_base_media_form %}
                     <sw-product-media-form :product="product"
-                                           @media-dropped="$emit('media-dropped', $event)">
+                                           @media-drop="$emit('media-drop', $event)">
                     </sw-product-media-form>
                 {% endblock %}
             </sw-card>
