--- a/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-payment/page/sw-settings-payment-detail/sw-settings-payment-detail.html.twig
@@ -98,6 +98,7 @@
                                         variant="regular"
                                         :label="$tc('sw-settings-payment.detail.labelLogoUpload')"
                                         :defaultFolder="paymentMethod.getEntityName()"
+                                        @media-drop="onDropMedia"
                                         @media-upload-sidebar-open="openMediaSidebar"
                                         @media-upload-remove-image="onUnlinkLogo">
                                 </sw-media-upload>
