--- a/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
+++ b/Resources/administration/src/module/sw-settings-shipping/page/sw-settings-shipping-detail/sw-settings-shipping-detail.html.twig
@@ -90,6 +90,7 @@
                                                  variant="regular"
                                                  :label="$tc('sw-settings-shipping.detail.labelLogoUpload')"
                                                  :defaultFolder="shippingMethod.getEntityName()"
+                                                 @media-drop="onDropMedia"
                                                  @media-upload-sidebar-open="openMediaSidebar"
                                                  @media-upload-remove-image="onUnlinkLogo">
                                 </sw-media-upload>
