--- a/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
+++ b/Resources/administration/src/module/sw-category/view/sw-category-detail-base/sw-category-detail-base.html.twig
@@ -224,7 +224,7 @@
                         :uploadTag="category.id"
                         :allowMultiSelect="false"
                         :defaultFolder="category.getEntityName()"
-                        @media-dropped="$emit('media-dropped', $event)"
+                        @media-drop="$emit('media-drop', $event)"
                         @media-upload-sidebar-open="openMediaSidebar"
                         @media-upload-remove-image="removeMediaItem">
                     </sw-media-upload>
