--- a/Resources/administration/src/module/sw-mail-template/component/sw-mail-template-media-form/sw-mail-template-media-form.html.twig
+++ b/Resources/administration/src/module/sw-mail-template/component/sw-mail-template-media-form/sw-mail-template-media-form.html.twig
@@ -12,6 +12,7 @@
                     :variant="'regular'"
                     :scrollTarget="$parent.$el"
                     :defaultFolder="mailTemplate.getEntityName()"
+                    @media-drop="$emit('media-drop', $event)"
                     @media-upload-sidebar-open="onMediaUploadButtonOpenSidebar">
             </sw-media-upload>
         {% endblock %}
