--- a/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
+++ b/Resources/administration/src/module/sw-manufacturer/page/sw-manufacturer-detail/sw-manufacturer-detail.html.twig
@@ -89,7 +89,7 @@
                                 :label="$tc('sw-manufacturer.detail.labelLogo')"
                                 :defaultFolder="manufacturerStore.getEntityName()"
                                 @sw-media-upload-media-upload-success="setMediaItem"
-                                @media-dropped="onDropMedia"
+                                @media-drop="onDropMedia"
                                 @media-upload-remove-image="onUnlinkLogo">
                             </sw-media-upload>
                         {% endblock %}
